Add icons to Why Use Shopify section

--- a/building-business-shopify.html
+++ b/building-business-shopify.html
@@ -110,7 +110,7 @@ permalink: /building-business-shopify/
                     include setting up your store, customising your theme, managing products and 
                     much more.</p>
                 <div class="center">
-                    <a class="btn-cnt" href="https://cntassociates.com/courses.asp" target="_blank" 
+                    <a class="btn-cnt" href="https://cntassociates.com/shopify.asp" target="_blank" 
                     rel="noopener noreferrer">More Information</a>
                 </div>
                 <p class="padding-top padding-bottom">Bonus: watch our free Intro video below to learn why you should be using Shopify 
@@ -130,15 +130,58 @@ permalink: /building-business-shopify/
                             alt="CNT Associates Empowering Your Vision">
                     </a>
                 </div>
-                <h3>Why Use Shopify...</h3>
-                <ul>
-                    <li>Responsive support team</li>
-                    <li>Customisable themes</li>
-                    <li>Try it free for 14 days</li>
-                    <li>Great tools for SEO</li>
-                    <li>Shopify App Store</li>
-                    <li>Shopify Theme Store</li>
-                </ul>
+                <h2 class="padding-top">Why Use Shopify...</h2>
+                <div class="row center">
+                    <div class="col-4">
+                        <span class="Custom-Polaris-Icon">
+                            <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                            <path d="M7.876 6.976l-.534-2.67A1.5 1.5 0 005.871 3.1H2.638c-.86 0-1.576.727-1.537 1.586.461 10.161 5.499 14.025 14.415 14.413.859.037 1.584-.676 1.584-1.535v-3.235a1.5 1.5 0 00-1.206-1.471l-2.67-.534a1.5 1.5 0 00-1.636.8l-.488.975c-2 0-5-3-5-5l.975-.488c.606-.302.934-.972.801-1.635z" fill-rule="evenodd"/>
+                            </svg>
+                        </span>
+                        <h3>Responsive support team</h3>
+                    </div>
+                    <div class="col-4">
+                        <span class="Custom-Polaris-Icon">
+                            <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                            <path d="M0 1.5A1.5 1.5 0 011.5 0h5A1.5 1.5 0 018 1.5V2h5a1 1 0 110 2H8v1.5A1.5 1.5 0 016.5 7H5v2H3V7H1.5A1.5 1.5 0 010 5.5v-4zM2 5V2h4v3H2z" fill-rule="evenodd"/>
+                            <path d="M5 17v1h1v2H4.5A1.5 1.5 0 013 18.5V17h2zM3 14v-3h2v3H3zM12 20H8v-2h4v2zM14 18h1v-1h2v1.5a1.5 1.5 0 01-1.5 1.5H14v-2zM16.907 4.841l2.252 2.252.375-.376a1.592 1.592 0 00-2.252-2.25l-.375.374zM18.125 8.124l-2.251-2.251-7.143 7.143L8 16l2.982-.731 7.143-7.144z" fill-rule="evenodd"/>
+                            </svg>
+                        </span>
+                        <h3>Customisable themes</h3></div>
+                    <div class="col-4">
+                        <span class="Custom-Polaris-Icon">
+                            <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                            <path d="M10 20c5.523 0 10-4.477 10-10S15.523 0 10 0 0 4.477 0 10s4.477 10 10 10zM7.707 8.707a1 1 0 11-1.414-1.414 1 1 0 011.414 1.414zm4.586-1.414a1 1 0 111.414 1.414 1 1 0 01-1.414-1.414zm.011 4.988c-.03.03-.786.72-2.304.72-1.497 0-2.252-.67-2.303-.718a1 1 0 00-1.404 1.424C6.425 13.84 7.653 15 10 15c2.346 0 3.575-1.16 3.707-1.293a.993.993 0 00.005-1.397 1.006 1.006 0 00-1.408-.029z" fill-rule="evenodd"/>
+                            </svg>
+                        </span>
+                        <h3>Try it free for 14 days</h3>
+                    </div>
+                    <div class="row center">
+                        <div class="col-4">
+                            <span class="Custom-Polaris-Icon">
+                                <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                                <path d="M18.414 1.586a2 2 0 010 2.828l-3 3-1.115 1.115-2.828-2.828 1.232-1.233.015-.015 2.868-2.867a2 2 0 012.828 0zm-8.47 11.299l-2.788-2.787a4.67 4.67 0 01-5.919-5.901L3.76 6.719a1.5 1.5 0 002.121 0l.84-.84a1.5 1.5 0 000-2.12L4.197 1.236a4.67 4.67 0 015.9 5.919l2.787 2.787 5.506 5.506a2.08 2.08 0 01-2.942 2.942l-5.506-5.506zm-1.415 1.414l-3.287 3.287L1 19l1.414-4.243 3.287-3.286 2.828 2.828z" fill-rule="evenodd"/>
+                                </svg>
+                            </span>
+                            <h3>Great tools for SEO</h3>
+                        </div>
+                        <div class="col-4">
+                            <span class="Custom-Polaris-Icon">
+                                <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                                <path d="M9 9H1V2.5A1.5 1.5 0 012.5 1H9v8zM9 11v8H2.5A1.5 1.5 0 011 17.5V11h8zM11 11v8h6.5a1.5 1.5 0 001.5-1.5V11h-8zM15 1a1 1 0 011 1v2h2a1 1 0 110 2h-2v2a1 1 0 11-2 0V6h-2a1 1 0 110-2h2V2a1 1 0 011-1z" fill-rule="evenodd"/>
+                                </svg>
+                            </span>
+                            <h3>Shopify App Store</h3></div>
+                        <div class="col-4">
+                            <span class="Custom-Polaris-Icon">
+                                <svg viewBox="0 0 20 20" class="Custom-Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                                <path d="M1.5 0A1.5 1.5 0 000 1.5v4A1.5 1.5 0 001.5 7H3v11.5A1.5 1.5 0 004.5 20H8a1 1 0 100-2H5V7h1.5A1.5 1.5 0 008 5.5V5h7a1 1 0 102 0v-.5A1.5 1.5 0 0015.5 3H8V1.5A1.5 1.5 0 006.5 0h-5zM2 2v3h4V2H2z" fill-rule="evenodd"/>
+                                <path d="M9 8a1 1 0 00-1 1v5a1 1 0 00.293.707l5 5a1 1 0 001.414 0l5-5a1 1 0 000-1.414l-5-5A1 1 0 0014 8H9zm4 4a1 1 0 11-2 0 1 1 0 012 0z" fill-rule="evenodd"/>
+                                </svg>
+                            </span>
+                            <h3>Shopify Theme Store</h3>
+                        </div>
+                </div>
             </div>
         </div>
         <div class="contact section">
