Fix padding of contact, footer and copyright sections

--- a/building-business-shopify.html
+++ b/building-business-shopify.html
@@ -181,6 +181,7 @@ permalink: /building-business-shopify/
                             </span>
                             <h3>Shopify Theme Store</h3>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
