Add icons to Key Skills on About page

--- a/about.html
+++ b/about.html
@@ -153,29 +153,36 @@ permalink: /about/
                 <div class="container-1000">
                     <h2>Key Skills</h2>
                     <hr class="left-align">
-                    <ul>
-                        <li>Acuity</li>
-                        <li>Adobe Photoshop</li>    
-                        <li>CSS</li> 
-                        <li>Elementor</li>                       
-                        <li>Google Analytics</li>
-                        <li>Google Search Console</li>                        
-                        <li>Google Optimize</li>
-                        <li>HTML</li>
-                        <li>Hotjar</li>
-                        <li>HubSpot</li>
-                        <li>JavaScript</li>
-                        <li>Mailchimp</li>
-                        <li>MailerLite</li>  
-                        <li>PHP</li>                                        
-                        <li>SEO (search engine optimisation)</li>
-                        <li>Shogun</li>
-                        <li>Shopify</li> 
-                        <li>Squarespace</li>
-                        <li>Unbounce</li>
-                        <li>Wix</li>
-                        <li>WordPress</li>
-                    </ul>
+                    <div class="row center">
+                        <div class="col-3"><i class="far fa-calendar-alt"></i><h3 class="smaller">Acuity</h3></div>
+                        <div class="col-3"><i class="far fa-image"></i></i><h3 class="smaller">Adobe Photoshop</h3></div>
+                        <div class="col-3"><i class="fab fa-css3-alt"></i></i><h3 class="smaller">CSS</h3></div>
+                        <div class="col-3"><i class="fab fa-elementor"></i></i><h3 class="smaller">Elementor</h3></div>
+                    </div>
+                    <div class="row center">
+                        <div class="col-3"><i class="fas fa-chart-line"></i></i><h3 class="smaller">Google Analytics</h3></div>
+                        <div class="col-3"><i class="fas fa-vials"></i></i><h3 class="smaller">Google Optimize</h3></div>
+                        <div class="col-3"><i class="fas fa-code"></i></i><h3 class="smaller">HTML</h3></div>
+                        <div class="col-3"><i class="fab fa-hotjar"></i></i><h3 class="smaller">Hotjar</h3></div>
+                    </div>
+                    <div class="row center">
+                        <div class="col-3"><i class="fab fa-hubspot"></i></i><h3 class="smaller">HubSpot</h3></div>
+                        <div class="col-3"><i class="fab fa-js"></i></i><h3 class="smaller">JavaScript</h3></div>
+                        <div class="col-3"><i class="fab fa-mailchimp"></i></i><h3 class="smaller">Mailchimp</h3></div>
+                        <div class="col-3"><i class="far fa-envelope"></i></i><h3 class="smaller">MailerLite</h3></div>
+                    </div>
+                    <div class="row center">
+                        <div class="col-3"><i class="fab fa-php"></i></i><h3 class="smaller">PHP</h3></div>
+                        <div class="col-3"><i class="fas fa-search"></i></i><h3 class="smaller">SEO</h3></div>
+                        <div class="col-3"><i class="fas fa-tools"></i></i><h3 class="smaller">Shogun</h3></div>
+                        <div class="col-3"><i class="fab fa-shopify"></i></i><h3 class="smaller">Shopify</h3></div>
+                    </div>
+                    <div class="row center">
+                        <div class="col-3"><i class="fab fa-squarespace"></i></i><h3 class="smaller">Squarespace</h3></div>
+                        <div class="col-3"><i class="fas fa-file-signature"></i></i><h3 class="smaller">Unbounce</h3></div>
+                        <div class="col-3"><i class="fab fa-wix"></i></i><h3 class="smaller">Wix</h3></div>
+                        <div class="col-3"><i class="fab fa-wordpress"></i></i><h3 class="smaller">WordPress</h3></div>
+                    </div>
                 </div>
             </div>
             <div class="events section grey">
