--- a/events.html
+++ b/events.html
@@ -230,8 +230,8 @@ permalink: /events/
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
-                        <p><a href="mailto:info@sybilmayard.com">info@sybilmayard.com</a></p>
                         <p>
+                            <a href="mailto:info@sybilmayard.com" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-linkedin-in"></i></a>
                             <a href="https://facebook.com/sybiltech" target="_blank" rel="noopener noreferrer">
@@ -241,11 +241,15 @@ permalink: /events/
                             <a href="https://instagram.com/sybiltech1" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-instagram"></i></a>
                         </p>
-                        <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png" 
-                                alt="FSB logo"></a></div>
-                        <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                        <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
+                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <p><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
+                                <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png"
+                                    alt="FSB logo"></a></p>
+                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltech?origin=PartnerBadge" target="_blank" rel="noopener noreferrer">
+                            <img src="https://images-1.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" 
+                            alt="IONOS - Official Partner">
+                            </a></p>                        
                     </div>
                 </div>
                 <div class="logo"><img src="https://sybilmayard.com/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
