--- a/blog.html
+++ b/blog.html
@@ -15,16 +15,15 @@ permalink: /blog/
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TagNav | Helping You Navigate Your Social Life | Sybiltech</title>       
-        <meta name="Description" content="TagNav is an app concept which helps students find and 
-        attend social events, tackling the feelings of isolation and depression associated with uni life.">
+        <title>Blog | Web Development &amp; E-Commerce Services | Sybiltech</title>       
+        <meta name="Description" content="Sybiltech provides website development and e-commerce
+        services for SMEs. Read my blog posts here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="An Android App for an Educational Poker Platform | Sybiltech" />
-        <meta property="og:description" content="SSybil Mayard&#039;s final MSc project was a 
-        Texas Hold&#039;em Poker Android app that teaches you how to play by recommending the best 
-        action to take at each round." />
+        <meta property="og:title" content="Blog | Web Development &amp; E-Commerce Services | Sybiltech" />
+        <meta property="og:description" content="Sybiltech provides website development and e-commerce
+        services for SMEs. Read my blog posts here." />
         <meta property="og:url" content="https://sybilmayard.com/blog/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
