Update VidCareer link, add PDF certificates

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ permalink: /
                     <h4>Pathways 21</h4>
                 </div>
                 <div class="col-3">                    
-                    <a href="https://sybilmayard.com/clients#gdpr-compliance-consultancy">
-                        <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" 
-                        alt="The GDPR Compliance Consultancy"></a>
-                <h4>The GDPR Compliance Consultancy</h4>
+                    <a href="https://sybilmayard.com/clients#events-meets-world">
+                        <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" 
+                        alt="Events Meets World"></a>
+                <h4>Events Meets World</h4>
                 </div>
             </div>
             <div class="center padding-bottom">
@@ -268,8 +268,11 @@ permalink: /
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
-                            alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
+                        <a href="https://sybilmayard.com/uploads/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing.pdf"
+                            target="_blank">
+                            <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
+                                alt="Sybil Mayard Google Digital Garage The Fundamentals of Digital Marketing certificate">
+                        </a>
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
@@ -280,8 +283,10 @@ permalink: /
                     </div>
                     <div class="col-4">
                         <h4>Google Analytics Academy Certified</h4>
-                        <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
-                            alt="Sybil Mayard Google Analytics for Beginners certificate">
+                        <a href="https://sybilmayard.com/uploads/sybil-mayard-google-analytics-for-beginners.pdf" target="_blank">
+                            <img src="https://sybilmayard.com/images/certifications/sybil-mayard-google-analytics-for-beginners-thumbnail.png"
+                                alt="Sybil Mayard Google Analytics for Beginners certificate">
+                        </a>
                     </div>
                 </div>
             </div>
