--- a/vidcareer.html
+++ b/vidcareer.html
@@ -105,7 +105,7 @@ permalink: /vidcareer/
                 <h2>The VidCareer Story</h2>
                 <p>VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform and social enterprise that helps small businesses connect with candidates via online career events – like careers fairs, but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
 
-                <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the <a href="https://www.vidcareer.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> demo site to learn more about how it works.</p>
+                <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date. Please visit the <a href="https://vidcareer.herokuapp.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> demo site to learn more about how it works.</p>
 
                 <p>I've designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the <a href="https://developer.goto.com/GoToMeetingV1/" target="_blank" rel="noopener noreferrer">GoToMeeting REST API</a> are some of the features implemented. The platform is deployed on a cloud hosting service, <a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a>.</p>
 
@@ -125,13 +125,15 @@ permalink: /vidcareer/
                 </ul>
 
                 <h2>Market Research</h2>
-                <p>I am pleased to announce that VidCareer was recently awarded grant funding from <a href="https://eira.ac.uk/" target="_blank" rel="noopener noreferrer">EIRA</a> (Enabling Innovation: Research to Application) to support essential market research. If you would like to get involved in testing the platform, please email <a href="mailto:info@vidcareer.com">info@vidcareer.com</a>. I am particularly interested to hear from employers and candidates in London, the East of England and the South East. The market research takes the form of 1-hour feedback sessions delivered via Zoom.</p>
+                <p>I am pleased to announce that VidCareer was recently awarded grant funding from <a href="https://eira.ac.uk/" target="_blank" rel="noopener noreferrer">EIRA</a> (Enabling Innovation: Research to Application) to support essential market research. Many thanks to everyone who particpated. The results of the research will soon be available on the <a href="https://vidcareer.herokuapp.com/" target="_blank" rel="noopener noreferrer">VidCareer</a> website.</p> 
+                
+                <!-- <p>If you would like to get involved in testing the platform, please email <a href="mailto:info@vidcareer.com">info@vidcareer.com</a>. I am particularly interested to hear from employers and candidates in London, the East of England and the South East. The market research takes the form of 1-hour feedback sessions delivered via Zoom.</p> -->
 
                 <p>Please download the guide below if you would like more information about the market research.</p>
                 <div class="padding-bottom padding-top">
                     <a class="btn-primary" href="https://sybilmayard.com/uploads/VidCareer-Information-v2.pdf" target="_blank">Download VidCareer Info</a>
                 </div>
-                <div class="padding-top"><a class="btn-secondary" href="https://www.vidcareer.com" target="_blank" rel="noopener noreferrer">Go to VidCareer</a></div>
+                <div class="padding-top"><a class="btn-secondary" href="https://vidcareer.herokuapp.com/" target="_blank" rel="noopener noreferrer">Go to VidCareer</a></div>
            
             </div>
         </div>
