--- a/clients.html
+++ b/clients.html
@@ -109,7 +109,7 @@ permalink: /clients/
                 <div id="events-meets-world" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" alt="Screenshot of the Events Meets World home page">
+                            <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" alt="Events Meets World">
                         </div>
                         <div class="col-8">
                             <h2>Events Meets World (Wix)</h2>
@@ -130,12 +130,12 @@ permalink: /clients/
                 <div id="pathways-21" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" alt="Screenshot of the Pathways 21 home page">
+                            <img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" alt="Pathways 21">
                         </div>
                         <div class="col-8">
                             <h2>Pathways 21 (WordPress)</h2>
                             <ul>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Google Analytics integration</li>
 				                <li>Google Search Console submission</li>
                             </ul>
@@ -150,7 +150,7 @@ permalink: /clients/
                 <div id="cnt-associates" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/CNT-Associates.jpg" alt="Screenshot of the CNT Associates home page">                         
+                            <img src="https://sybilmayard.com/images/clients/CNT-Associates.jpg" alt="CNT Associates">                         
                         </div>
                         <div class="col-8">
                             <h2>CNT Associates</h2>
@@ -169,7 +169,7 @@ permalink: /clients/
                 <div id="find-the-balance" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" alt="Screenshot of the Find the Balance home page">                         
+                            <img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" alt="Find the Balance">                         
                         </div>
                         <div class="col-8">
                             <h2>Find the Balance (Squarespace)</h2>
@@ -188,12 +188,12 @@ permalink: /clients/
                 <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" alt="Screenshot of the Audrey Zeitoun Coaching home page">                         
+                            <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" alt="Audrey Zeitoun Coaching">                         
                         </div>
                         <div class="col-8">
                             <h2>Audrey Zeitoun Coaching (Wix)</h2>
                             <ul>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Search engine optimisation</li>
                                 <li>MailerLite integration</li>
 				                <li>Google Search Console submission</li>
@@ -209,12 +209,12 @@ permalink: /clients/
                 <div id="blue-horizon-lnw" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Blue-Horizon-LNW.jpg" alt="Screenshot of the Blue Horizon LNW home page">                         
+                            <img src="https://sybilmayard.com/images/clients/Blue-Horizon-LNW.jpg" alt="Blue Horizon LNW">                         
                         </div>
                         <div class="col-8">
                             <h2>Blue Horizon LNW (Bandzoogle)</h2>
                             <ul>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Custom domain setup</li>
                                 <li>Google Analytics integration</li>
                                 <li>Google Search Console submission</li>
@@ -230,7 +230,7 @@ permalink: /clients/
                 <div id="tania-paige-designs" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/tania-paige-designs.jpg" alt="Screenshot of the Tania Paige Designs home page">                         
+                            <img src="https://sybilmayard.com/images/clients/tania-paige-designs.jpg" alt="Tania Paige Designs">                         
                         </div>
                         <div class="col-8">
                             <h2>Tania Paige Designs (Shopify)</h2>
@@ -250,7 +250,7 @@ permalink: /clients/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/New-Haw-Community-Centre.jpg" alt="Screenshot of the New Haw Community Centre home page">                         
+                            <img src="https://sybilmayard.com/images/clients/New-Haw-Community-Centre.jpg" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-8">
                             <h2>New Haw Community Centre (WordPress)</h2>
@@ -272,7 +272,7 @@ permalink: /clients/
                 <div id="esme-learning-solutions" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Esme-Learning-Solutions.jpg" alt="Screenshot of the Esme Learning Solutions home page">                         
+                            <img src="https://sybilmayard.com/images/clients/Esme-Learning-Solutions.jpg" alt="Esme Learning Solutions">                         
                         </div>
                         <div class="col-8">
                             <h2>Esme Learning Solutions (Shopify)</h2>
@@ -296,13 +296,13 @@ permalink: /clients/
                 <div id="future-communities-uk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" alt="Screenshot of the Future Communities UK home page">                         
+                            <img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" alt="Future Communities UK">                         
                         </div>
                         <div class="col-8">
                             <h2>Future Communities UK (WordPress)</h2>
                             <ul>
                                 <li>Website audit</li>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Google Analytics integration</li>
                                 <li>Mailchimp integration</li>
 				                <li>Google Search Console submission</li>
@@ -318,7 +318,7 @@ permalink: /clients/
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Screenshot of the Wardell's Wardrobe home page">                         
+                            <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-8">
                             <h2>Wardell's Wardrobe (Shopify)</h2>
@@ -339,7 +339,7 @@ permalink: /clients/
 		<div id="bamboo-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="Screenshot of The Bamboo Wardrobe home page">                         
+                            <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
                         </div>
                         <div class="col-8">
                             <h2>The Bamboo Wardrobe (Wix)</h2>
@@ -359,7 +359,7 @@ permalink: /clients/
                 <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" alt="Screenshot of The GDPR Compliance Consultancy home page">                         
+                            <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" alt="The GDPR Compliance Consultancy">                         
                         </div>
                         <div class="col-8">
                             <h2>The GDPR Compliance Consultancy (WordPress)</h2>
@@ -379,12 +379,12 @@ permalink: /clients/
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/SwipSearch.jpg" alt="Screenshot of the SwipSearch home page">                         
+                            <img src="https://sybilmayard.com/images/clients/SwipSearch.jpg" alt="SwipSearch">                         
                         </div>
                         <div class="col-8">
                             <h2>SwipSearch (Wix)</h2>
                             <ul>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Landing page design</li>
                             </ul>
                             <div class="padding-btn">
@@ -398,12 +398,12 @@ permalink: /clients/
                 <div id="kyosk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/KYOSK.jpg" alt="Screenshot of the KYOSK home page">                         
+                            <img src="https://sybilmayard.com/images/clients/KYOSK.jpg" alt="KYOSK">                         
                         </div>
                         <div class="col-8">
                             <h2>KYOSK (Shopify)</h2>
                             <ul>
-                                <li>Full website development</li>
+                                <li>Website development</li>
                                 <li>Theme customisations</li>
                                 <li>Image gallery carousel with Slick</li>
                                 <li>Chatbot setup (Tidio)</li>
@@ -420,7 +420,7 @@ permalink: /clients/
                 <div id="focus-on-learning" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/focus-on-learning.jpg" alt="Screenshot of the Focus on Learning home page">                         
+                            <img src="https://sybilmayard.com/images/clients/focus-on-learning.jpg" alt="Focus on Learning">                         
                         </div>
                         <div class="col-8">
                             <h2>Focus on Learning (Squarespace)</h2>
