--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -35,7 +35,7 @@ permalink: /6-tips-for-surviving-remote-working/
         <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle." />
         <meta property="og:url" content="https://sybilmayard.com/6-tips-for-surviving-remote-working/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/Laptop-notepad-pen-and-iphone-on-table-1200x630.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
