--- a/building-business-shopify.html
+++ b/building-business-shopify.html
@@ -24,7 +24,7 @@ permalink: /building-business-shopify/
         <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms today. Learn how to build a business effectively with Shopify by taking our video course. Sign up now." />
         <meta property="og:url" content="https://sybilmayard.com/building-business-shopify/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk-1200x630.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
