--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -35,7 +35,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
         <meta property="og:description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltech on Twitter: twitter.com/Sybiltech1." />
         <meta property="og:url" content="https://sybilmayard.com/webtip-wednesday-series-launched-on-twitter/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/black-and-silver-laptop-computer-on-table.jpg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
