--- a/services.html
+++ b/services.html
@@ -153,7 +153,7 @@ permalink: /services/
                     <li>Adding colour swatches to products on a Shopify store</li>
                 </ul>
                 <div class="center padding-bottom padding-top">
-                    <a class="btn-primary" href="contact">Contact Me</a>   
+                    <a class="btn-primary" href="https://sybilmayard.com/contact">Contact Me</a>   
                 </div>
             </div>
         </div>
