Consolidate all projects into projects.html

--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,7 @@ permalink: /contact/
                             <a href="https://sybilmayard.com/faqs">FAQs</a>
                         </div>
                     </div>                    
-                    <div class="dropdown">
-                        <button class="dropbtn">Projects
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="https://sybilmayard.com/vidcareer">VidCareer</a>
-                            <a href="https://sybilmayard.com/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://sybilmayard.com/tagnav">TagNav</a>
-                            <a href="https://sybilmayard.com/my-personal-portfolio">My Personal Portfolio</a>
-                        </div>
-                    </div>
+                    <a href="https://sybilmayard.com/projects">Projects</a>
                     <div class="dropdown">
                         <button class="dropbtn">Blog
                             <i class="fa fa-caret-down"></i>
