Add images for 17th August 2021 Shopify event

--- a/events.html
+++ b/events.html
@@ -26,6 +26,11 @@ permalink: /events/
                 "@type": "VirtualLocation",
                 "url": "https://us02web.zoom.us/"
                 },
+	      "image": [
+                "https://sybilmayard.com/images/shopify/Shopify_v15_Facebook.jpg",
+                "https://sybilmayard.com/images/shopify/Shopify_v15_Instagram.jpg",
+                "https://sybilmayard.com/images/shopify/Shopify_v15_Twitter.jpg"
+               ],
               "description": "Learn how to use Shopify to market, promote and sell your services or products.",
               "offers": {
                 "@type": "Offer",
