--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@ permalink: /projects/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Projects | Website Development & E-Commerce | Sybiltech" />
         <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
-        <meta property="og:url" content="https://sybilmayard.com/vidcareer/" />
+        <meta property="og:url" content="https://sybilmayard.com/projects/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +33,7 @@ permalink: /projects/
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.com/vidcareer/" />
+        <link rel="canonical" href="https://sybilmayard.com/projects/" />
         <link rel="stylesheet" href="https://sybilmayard.com/styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
