--- a/clients.html
+++ b/clients.html
@@ -107,6 +107,7 @@ permalink: /clients/
                                 <li>Newsletter popup form</li>
                                 <li>Newsletter embedded form</li>
                                 <li>Email campaigns</li>
+                                <li>Website design improvements</li>
                                 <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
@@ -217,26 +218,6 @@ permalink: /clients/
                     </div>
                 </div>
 
-                <div id="tania-paige-designs" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-4">   
-                            <img src="https://sybilmayard.com/images/clients/tania-paige-designs.jpg" alt="Tania Paige Designs">                         
-                        </div>
-                        <div class="col-8">
-                            <h2>Tania Paige Designs (Shopify)</h2>
-                            <ul>
-                                <li>Search engine optimisation</li>
-                                <li>Design improvements</li>
-				                <li>Google Search Console submission</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://www.taniapaigedesigns.org"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
@@ -293,6 +274,7 @@ permalink: /clients/
                             <ul>
                                 <li>Website audit</li>
                                 <li>Website development</li>
+                                <li>Online resources for members only</li>
                                 <li>Google Analytics integration</li>
                                 <li>Mailchimp integration</li>
 				                <li>Google Search Console submission</li>
