Add most recent clients

--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@ permalink: /
                 worked with:</p>
             <div class="row">
                 <div class="col-3">                        
-                    <a href="https://sybilmayard.com/clients#audrey-zeitoun-coaching">
-                        <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" 
-                        alt="Audrey Zeitoun Coaching"></a>
-                    <h4>Audrey Zeitoun Coaching</h4>
+                    <a href="https://sybilmayard.com/clients#happily-clappily-ever-laughter">
+                        <img src="https://sybilmayard.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" 
+                        alt="Happily Clappily Ever Laughter"></a>
+                    <h4>Happily Clappily Ever Laughter</h4>
                 </div>
                 <div class="col-3">                    
-                <a href="https://sybilmayard.com/clients#find-the-balance"><img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" 
-                    alt="Find the Balance"></a>
-                <h4>Find the Balance</h4>
+                <a href="https://sybilmayard.com/clients#x-blu"><img src="https://sybilmayard.com/images/clients/x-blu.JPG" 
+                    alt="x-blu"></a>
+                <h4>x-blu</h4>
                 </div>
                 <div class="col-3">                       
-                    <a href="https://sybilmayard.com/clients#pathways-21"><img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" 
-                        alt="Pathways 21"></a>
-                    <h4>Pathways 21</h4>
+                    <a href="https://sybilmayard.com/clients#future-communities-uk"><img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" 
+                        alt="Future Communities UK"></a>
+                    <h4>Future Communities UK</h4>
                 </div>
                 <div class="col-3">                    
                     <a href="https://sybilmayard.com/clients#events-meets-world">
