--- a/clients.html
+++ b/clients.html
@@ -91,10 +91,55 @@ permalink: /clients/
             </div>
         </div>
         <div class="main section">
-            <div class="container-1000">  
+            <div class="container-1000 padding-top padding-bottom">  
+
+                <div id="back-to-top" style="position: fixed; bottom: 20px; right: 20px;">
+                    <a href="#"><p style="font-size: 24px">↑</p></a>
+                </div>
+
                 <p>Throughout my freelancing career, I’ve helped a variety of clients achieve 
                     their goal of improving their online presence. Here is a selection of my 
                     most recent client projects and the services that were provided.</p>
+
+                <div id="happily-clappily-ever-laughter" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/Happily-Clappily-Ever-Laughter.JPG" alt="Happily Clappily Ever Laughter">
+                        </div>
+                        <div class="col-8">
+                            <h2>Happily Clappily Ever Laughter</h2>
+                            <h3 style="font-size: 18px;">Discover the benefits of laughter!</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="x-blu" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-4">
+                            <img src="https://sybilmayard.com/images/clients/x-blu.JPG" alt="x-blu">
+                        </div>
+                        <div class="col-8">
+                            <h2>x-blu</h2>
+                            <h3 style="font-size: 18px;">Avant-garde punkists play out like Joy Division meets Nico</h3>
+                            <ul>
+                                <li>Website development</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://x-blu.com" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="events-meets-world" class="shadow-box-2">
                     <div class="row-2">
@@ -102,7 +147,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/events-meets-world.jpg" alt="Events Meets World">
                         </div>
                         <div class="col-8">
-                            <h2>Events Meets World (Wix)</h2>
+                            <h2>Events Meets World</h2>
+                            <h3 style="font-size: 18px;">Events management, catering and hire services</h3>
                             <ul>
                                 <li>Newsletter popup form</li>
                                 <li>Newsletter embedded form</li>
@@ -124,10 +170,11 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/Pathways-21.jpg" alt="Pathways 21">
                         </div>
                         <div class="col-8">
-                            <h2>Pathways 21 (WordPress)</h2>
+                            <h2>Pathways 21</h2>
+                            <h3 style="font-size: 18px;">A total solution for business development, fundraising, digital services and SME support</h3>
                             <ul>
                                 <li>Website development</li>
-                                <li>Google Analytics integration</li>
+                                <li>Google Analytics setup</li>
 				                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
@@ -145,6 +192,7 @@ permalink: /clients/
                         </div>
                         <div class="col-8">
                             <h2>CNT Associates</h2>
+                            <h3 style="font-size: 18px;">Business support and fundraising</h3>
                             <ul>
                                 <li>Mailchimp integration</li>
                                 <li>Website audit</li>
@@ -163,7 +211,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/find-the-balance.jpg" alt="Find the Balance">                         
                         </div>
                         <div class="col-8">
-                            <h2>Find the Balance (Squarespace)</h2>
+                            <h2>Find the Balance</h2>
+                            <h3 style="font-size: 18px;">Yoga and bodywork</h3>
                             <ul>
                                 <li>Appointment scheduling (Acuity)</li>
                                 <li>Mailchimp integration</li>
@@ -182,7 +231,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/Audrey-Zeitoun-Coaching.jpg" alt="Audrey Zeitoun Coaching">                         
                         </div>
                         <div class="col-8">
-                            <h2>Audrey Zeitoun Coaching (Wix)</h2>
+                            <h2>Audrey Zeitoun Coaching</h2>
+                            <h3 style="font-size: 18px;">Personal life coach and relationship coach</h3>
                             <ul>
                                 <li>Website development</li>
                                 <li>Search engine optimisation</li>
@@ -203,11 +253,12 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/Blue-Horizon-LNW.jpg" alt="Blue Horizon LNW">                         
                         </div>
                         <div class="col-8">
-                            <h2>Blue Horizon LNW (Bandzoogle)</h2>
+                            <h2>Blue Horizon LNW</h2>
+                            <h3 style="font-size: 18px;">New sounds for a new decade</h3>
                             <ul>
                                 <li>Website development</li>
                                 <li>Custom domain setup</li>
-                                <li>Google Analytics integration</li>
+                                <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>              
                             <div class="padding-btn">
@@ -224,11 +275,11 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/New-Haw-Community-Centre.jpg" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-8">
-                            <h2>New Haw Community Centre (WordPress)</h2>
+                            <h2>New Haw Community Centre</h2>
+                            <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
                             <ul>
                                 <li>Theme refresh</li>
                                 <li>Theme customisations</li>
-                                <li>Search engine optimisation</li>
                                 <li>Blog publishing</li>
 				                <li>Google Search Console submission</li>
                             </ul>
@@ -246,7 +297,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/Esme-Learning-Solutions.jpg" alt="Esme Learning Solutions">                         
                         </div>
                         <div class="col-8">
-                            <h2>Esme Learning Solutions (Shopify)</h2>
+                            <h2>Esme Learning Solutions</h2>
+                            <h3 style="font-size: 18px;">Professional development courses from top-tier universities powered by next-gen AI learning</h3>
                             <ul>
                                 <li>General website maintenance</li>
                                 <li>Managing products</li>
@@ -270,12 +322,13 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/Future-Communities-UK.jpg" alt="Future Communities UK">                         
                         </div>
                         <div class="col-8">
-                            <h2>Future Communities UK (WordPress)</h2>
+                            <h2>Future Communities UK</h2>
+                            <h3 style="font-size: 18px;">Community engagement, training, consultancy and partnership work</h3>
                             <ul>
                                 <li>Website audit</li>
                                 <li>Website development</li>
                                 <li>Online resources for members only</li>
-                                <li>Google Analytics integration</li>
+                                <li>Google Analytics setup</li>
                                 <li>Mailchimp integration</li>
 				                <li>Google Search Console submission</li>
                             </ul>   
@@ -293,7 +346,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/wardells-wardrobe.jpg" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-8">
-                            <h2>Wardell's Wardrobe (Shopify)</h2>
+                            <h2>Wardell's Wardrobe</h2>
+                            <h3 style="font-size: 18px;">Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</h3>
                             <ul>
                                 <li>Colour swatches</li>
                                 <li>Out of stock email notifications</li>
@@ -314,7 +368,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/the-bamboo-wardrobe.jpg" alt="The Bamboo Wardrobe">                         
                         </div>
                         <div class="col-8">
-                            <h2>The Bamboo Wardrobe (Wix)</h2>
+                            <h2>The Bamboo Wardrobe</h2>
+                            <h3 style="font-size: 18px;">Wholesale bamboo clothing</h3>
                             <ul>
                                 <li>Website design improvements</li>
                                 <li>E-commerce setup (products and email notifications)</li>
@@ -334,7 +389,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/The-GDPR-Compliance-Consultancy.jpg" alt="The GDPR Compliance Consultancy">                         
                         </div>
                         <div class="col-8">
-                            <h2>The GDPR Compliance Consultancy (WordPress)</h2>
+                            <h2>The GDPR Compliance Consultancy</h2>
+                            <h3 style="font-size: 18px;">Getting Data Protection Right</h3>
                             <ul>
                                 <li>Website maintenance</li>
                                 <li>Theme refresh</li>
@@ -354,7 +410,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/SwipSearch.jpg" alt="SwipSearch">                         
                         </div>
                         <div class="col-8">
-                            <h2>SwipSearch (Wix)</h2>
+                            <h2>SwipSearch</h2>
+                            <h3 style="font-size: 18px;">Swipe right to get hired</h3>
                             <ul>
                                 <li>Website development</li>
                                 <li>Landing page design</li>
@@ -373,7 +430,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/KYOSK.jpg" alt="KYOSK">                         
                         </div>
                         <div class="col-8">
-                            <h2>KYOSK (Shopify)</h2>
+                            <h2>KYOSK</h2>
+                            <h3 style="font-size: 18px;">Antibacterial phone booths for open space areas</h3>
                             <ul>
                                 <li>Website development</li>
                                 <li>Theme customisations</li>
@@ -395,7 +453,8 @@ permalink: /clients/
                             <img src="https://sybilmayard.com/images/clients/focus-on-learning.jpg" alt="Focus on Learning">                         
                         </div>
                         <div class="col-8">
-                            <h2>Focus on Learning (Squarespace)</h2>
+                            <h2>Focus on Learning</h2>
+                            <h3 style="font-size: 18px;">Expert online English tuition by independent teachers</h3>
                             <ul>
                                 <li>Website audit</li>
                             </ul>
@@ -407,7 +466,7 @@ permalink: /clients/
                     </div>
                 </div>
 
-                <p style="text-align: center">Find out how I can help your business grow further today.</p>
+                <p class="padding-top center">Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
                     <a class="btn-primary" href="https://sybilmayard.com/contact">Contact Me</a>
