Optimise site for performance

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@ permalink: /contact/
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script defer src="https://sybilmayard.com/fontawesome/js/all.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152639461-1"></script>
         <script>
@@ -12,7 +13,6 @@ permalink: /contact/
             gtag('js', new Date());
             gtag('config', 'UA-152639461-1');
         </script>
-        <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact | Web Development & E-Commerce Services | Sybiltech</title>       
@@ -34,10 +34,7 @@ permalink: /contact/
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybilmayard.com/contact/" />
-        <link rel="stylesheet" href="https://sybilmayard.com/styles.css" type="text/css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://sybilmayard.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybilmayard.com/favicon.png">
     </head>
     <body>
@@ -107,12 +104,7 @@ permalink: /contact/
         <div class="footer section">
             <div class="container-1200">
                 <div class="row">
-                    <div class="col-3">
-                        <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
-                        href="https://twitter.com/Sybiltech1?ref_src=twsrc%5Etfw">Tweets by Sybiltech1</a> 
-                        <script async src="https://platform.twitter.com/widgets.js"></script>
-                    </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybilmayard.com/about">About</a></p>
@@ -121,14 +113,14 @@ permalink: /contact/
                         <p><a href="https://sybilmayard.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybilmayard.com/privacy-policy">Privacy Policy</a></p>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <h4>Services</h4>
                         <p>Shopify Sites</p>
                         <p>WordPress Sites</p>
                         <p>Wix Sites</p>
                         <p>Squarespace Sites</p>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="mailto:info@sybilmayard.com" target="_blank"><i class="far fa-envelope"></i></a>
