--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ permalink: /
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybilmayard.com/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.com/images/sybiltech-logo-social.jpeg" />
+        <meta property="og:image" content="https://sybilmayard.com/images/logos/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -43,7 +43,7 @@ permalink: /
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://sybilmayard.com/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@ permalink: /
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
-                        <img src="https://sybilmayard.com/images/shopify_logo_black-300x86.png" alt="Shopify logo">                 
+                        <img src="https://sybilmayard.com/images/logos/shopify_logo_black-300x86.png" alt="Shopify logo">                 
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
@@ -187,7 +187,7 @@ permalink: /
                                 hard worker.<br>I would recommend her to anyone looking for a partner 
                                 to nail your website!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/KYOSK-Logo.png" alt="KYOSK logo">
+                                <img src="https://sybilmayard.com/images/logos/KYOSK-Logo.png" alt="KYOSK logo">
                             </div>
                             <h4>Shaheen Javid</h4>
                             <p class="center">CEO,<br>
@@ -205,7 +205,7 @@ permalink: /
                                 explanations. I would highly recommend Sybil's 
                                 services to anyone!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
+                                <img src="https://sybilmayard.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                             </div>
                             <h4>Freddie Ryder</h4>
                             <p class="center">CEO,<br>
@@ -222,7 +222,7 @@ permalink: /
                                 Her work is of a high quality and she is able to work both as part 
                                 of a team and on her own initiative.</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
+                                <img src="https://sybilmayard.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                             </div>
                             <h4>Gary Parker</h4>
                             <p class="center">Director,<br>
@@ -238,7 +238,7 @@ permalink: /
                                 Sybil to anyone wanting a high quality, personalised and reasonably 
                                 priced service. Her work is top class!</p>
                             <div class="center">
-                                <img src="https://sybilmayard.com/images/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
+                                <img src="https://sybilmayard.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                             </div>
                             <h4>Audrey Zeitoun</h4>
                             <p class="center">Life Transitions Coach,<br>
@@ -317,7 +317,7 @@ permalink: /
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybilmayard.com/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
+                            <img src="https://sybilmayard.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
                             <p><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
                                 <img src="https://sybilmayard.com/images/FSB-Member-Logo-White.png"
                                     alt="FSB logo"></a></p>
@@ -327,7 +327,7 @@ permalink: /
                             </a></p>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybilmayard.com/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
